--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -1,10 +1,56 @@
-h1 {
-    font-family: 'Playfair Display', serif;
-    font-size: bold;
+:root {
+  --primary-color: #272142;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Playfair Display", serif;
+}
+
+.hero {
+  background: #f9f7fe;
+  text-align: center;
+  padding: 189px 30px 189px 30px;
+}
+
+.emoji {
+  font-size: 25px;
 }
 
 p {
-    font-family: 'Poppins', sans-serif;
-    font-weight:normal;
+  font-family: "Poppins", sans-serif;
+  color: var(--primary-color);
+  margin: 0;
+  font-weight: bold;
+  font-size: 36px;
 }
 
+h1 {
+  font-size: 96px;
+  margin-bottom: 30px;
+}
+
+h2 {
+  font-family: "Poppins", sans-serif;
+  color: var(--primary-color);
+  font-size: 24px;
+  margin-bottom: 45px;
+}
+
+a {
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  color: white;
+  background-color: #6c63ff;
+  font-size: 18px;
+  border-radius: 4px;
+  padding: 12px 60px 12px 60px;
+}
+a:hover {
+  color: var(--primary-color);
+  transition: all 100ms ease-in-out;
+}
