--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -5,7 +5,6 @@
 
 h1,
 h2,
-h3,
 h4,
 h5,
 h6 {
@@ -26,7 +25,7 @@ h6 {
   font-size: 36px;
 }
 
-.hero h1 {
+.hero h1, .about-header, .about-subtitle {
   font-size: 96px;
   margin-bottom: 30px;
 }
@@ -45,11 +44,11 @@ margin-top: 100px;
   font-size: 49px;
 }
 
-.container p {
+.container p, .about-paragraph p {
   font-size: 16px;
   line-height: 30px;
   font-family: "Poppins", sans-serif;
-  font-weight: 500;
+  /* font-weight: 500; */
 }
 
 
@@ -63,7 +62,10 @@ p.subheading {
 
 img {
   margin: 60px 0 0 0;
-  /* width: 450px; */
+}
+
+.about-img {
+  padding: 0 0 0 0;
 }
 
 a {
@@ -143,6 +145,32 @@ button.btn {
   margin: 30px 0 0px 0;
   padding: 0;
 }
-.
+
 }
 
+h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight:Bold;
+}
+
+img {
+  width: 550px;
+}
+
+.about-header {
+  margin-top: 200px;
+}
+
+
+@media (max-width: 992px) {
+
+  .row {
+    margin: 0 40px 40px 40px;
+    text-align: center;
+  }
+  .about-img {
+    padding: 0 0 0 0;
+    max-width: 500px;
+  }
+}
