--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -1,14 +1,22 @@
 :root {
   --primary-color: #272142;
-  --theme-font: "Playfair Display", serif;
+  --headings-font: "Playfair Display", serif;
 }
 
 h1,
 h2,
+h3,
 h4,
 h5,
 h6 {
-  font-family: var(--theme-font);
+  font-family: var(--headings-font);
+}
+
+
+h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight:Bold;
 }
 
 .hero {
@@ -25,7 +33,7 @@ h6 {
   font-size: 36px;
 }
 
-.hero h1, .about-header, .about-subtitle {
+.hero h1, .content-header, .content-subtitle {
   font-size: 96px;
   margin-bottom: 30px;
 }
@@ -40,11 +48,11 @@ margin-top: 100px;
 }
 
 .container h2 {
-  font-family: var(--theme-font);
+  font-family: var(--headings-font);
   font-size: 49px;
 }
 
-.container p, .about-paragraph p {
+.container p, .content-paragraph p {
   font-size: 16px;
   line-height: 30px;
   font-family: "Poppins", sans-serif;
@@ -59,13 +67,14 @@ p.subheading {
 
 }
 
-
 img {
   margin: 60px 0 0 0;
+  width: 550px;
 }
 
-.about-img {
+.content-img {
   padding: 0 0 0 0;
+  /* width: 60%; */
 }
 
 a {
@@ -102,20 +111,28 @@ button.btn {
     color: var(--primary-color)
 }
 
+.col-6 {
+  padding:0;
+}
+
 @media (max-width: 992px) {
   .app-content {
     width: 100%;
     text-align: center;
   }
-   
-}
-
-@media (max-width: 992px) {
-   .row h2 {
-      font-size: 20px;
+  .row h2 {
+     font-size: 20px;
+   }
+   .container h2 {
+     font-size: 64px;
     }
-    .container h2 {
-      font-size: 64px;
+    .row {
+      margin: 0 40px 40px 40px;
+      text-align: center;
+    }
+    .content-img {
+      padding: 0 0 0 0;
+      max-width: 500px;
     }
 }
 
@@ -139,38 +156,14 @@ button.btn {
   padding: 0;
 }
 .container {
-  padding: 0;
+  padding: 0
 }
 .subheading {
   margin: 30px 0 0px 0;
   padding: 0;
 }
-
 }
 
-h3 {
-  font-family: "Poppins", sans-serif;
-  font-size: 18px;
-  font-weight:Bold;
-}
-
-img {
-  width: 550px;
-}
-
-.about-header {
+.content-header {
   margin-top: 200px;
-}
-
-
-@media (max-width: 992px) {
-
-  .row {
-    margin: 0 40px 40px 40px;
-    text-align: center;
-  }
-  .about-img {
-    padding: 0 0 0 0;
-    max-width: 500px;
-  }
 }
