--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -77,7 +77,7 @@ img {
   /* width: 60%; */
 }
 
-a {
+link {
   text-decoration: none;
   font-family: "Poppins", sans-serif;
   color: white;
@@ -87,7 +87,7 @@ a {
   padding: 12px 60px 12px 60px;
 }
 
-a:hover {
+link:hover {
   color: var(--primary-color);
   transition: all 100ms ease-in-out;
 }
