--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -12,11 +12,10 @@ h6 {
   font-family: var(--headings-font);
 }
 
-
 h3 {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
-  font-weight:Bold;
+  font-weight: Bold;
 }
 
 .hero {
@@ -33,9 +32,15 @@ h3 {
   font-size: 36px;
 }
 
-.hero h1, .content-header, .content-subtitle {
+.hero h1,
+.content-header,
+.content-subtitle {
   font-size: 96px;
   margin-bottom: 30px;
+}
+
+.content-header {
+  margin-top: 200px;
 }
 
 .hero h2 {
@@ -44,7 +49,7 @@ h3 {
 }
 
 .row h2 {
-margin-top: 100px;
+  margin-top: 100px;
 }
 
 .container h2 {
@@ -52,19 +57,18 @@ margin-top: 100px;
   font-size: 49px;
 }
 
-.container p, .content-paragraph p {
+.container p,
+.content-paragraph p {
   font-size: 16px;
   line-height: 30px;
   font-family: "Poppins", sans-serif;
   /* font-weight: 500; */
 }
 
-
 p.subheading {
   margin: 50px 0 30px 0;
   text-align: center;
   font-size: 18px;
-
 }
 
 img {
@@ -77,7 +81,7 @@ img {
   /* width: 60%; */
 }
 
-link {
+.link {
   text-decoration: none;
   font-family: "Poppins", sans-serif;
   color: white;
@@ -87,7 +91,7 @@ link {
   padding: 12px 60px 12px 60px;
 }
 
-link:hover {
+.link:hover {
   color: var(--primary-color);
   transition: all 100ms ease-in-out;
 }
@@ -100,19 +104,15 @@ button.btn {
   font-size: 18px;
   border-radius: 4px;
   padding: 12px 60px 12px 60px;
-  border-color: #6c63ff!important;
+  border-color: #6c63ff !important;
   border-width: 1.5px;
   margin-bottom: 50px;
 }
 
- button.btn:hover {
+button.btn:hover {
   color: var(--primary-color);
-    border-color: #6c63ff;
-    color: var(--primary-color)
-}
-
-.col-6 {
-  padding:0;
+  border-color: #6c63ff;
+  color: var(--primary-color);
 }
 
 @media (max-width: 992px) {
@@ -121,49 +121,56 @@ button.btn {
     text-align: center;
   }
   .row h2 {
-     font-size: 20px;
-   }
-   .container h2 {
-     font-size: 64px;
-    }
-    .row {
-      margin: 0 40px 40px 40px;
-      text-align: center;
-    }
-    .content-img {
-      padding: 0 0 0 0;
-      max-width: 500px;
-    }
+    font-size: 20px;
+  }
+  .container h2 {
+    font-size: 64px;
+  }
+  .row {
+    margin: 0 40px 40px 40px;
+    text-align: center;
+  }
+  .content-img {
+    padding: 0 0 0 0;
+    max-width: 500px;
+  }
+  .col-lg-6 img {
+    width: 50%;
+    padding: 0;
+    margin: 0;
+  }
+  .content-header {
+    margin-top: 50px;
+  }
+}
+
+@media (min-width: 770px) {
 }
 
 @media (max-width: 414px) {
-  .hero{
+  .hero {
     padding: 60px;
   }
-.hero h1 {
-  font-size: 43px;
-}
-.hero p {
-  font-size: 20px;
-  padding-top: 35px; 
-}
-.hero a{
-  font-size: 20px;
-}
-.container h2 {
-  font-size: 40px;
-  margin: 0;
-  padding: 0;
-}
-.container {
-  padding: 0
-}
-.subheading {
-  margin: 30px 0 0px 0;
-  padding: 0;
-}
-}
-
-.content-header {
-  margin-top: 200px;
+  .hero h1 {
+    font-size: 43px;
+  }
+  .hero p {
+    font-size: 20px;
+    padding-top: 35px;
+  }
+  .hero a {
+    font-size: 20px;
+  }
+  .container h2 {
+    font-size: 40px;
+    margin: 0;
+    padding: 0;
+  }
+  .container {
+    padding: 0;
+  }
+  .subheading {
+    margin: 30px 0 0px 0;
+    padding: 0;
+  }
 }
