--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -12,6 +12,10 @@ h6 {
   font-family: var(--headings-font);
 }
 
+h1 {
+font-size: 64px;
+}
+
 h3 {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
@@ -31,6 +35,7 @@ h3 {
   font-weight: bold;
   font-size: 36px;
 }
+
 
 .hero h1,
 .content-header,
@@ -144,8 +149,6 @@ button.btn:hover {
   }
 }
 
-@media (min-width: 770px) {
-}
 
 @media (max-width: 414px) {
   .hero {
@@ -174,3 +177,8 @@ button.btn:hover {
     padding: 0;
   }
 }
+    @media (max-width: 576px) {
+      h1 {
+    font-size: 38px;
+  }
+    }
