--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -81,6 +81,10 @@ img {
   width: 550px;
 }
 
+ .col-lg-6 img {
+  margin-top: 68px;
+ }
+
 .content-img {
   padding: 0 0 0 0;
   /* width: 60%; */
