--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -14,6 +14,7 @@ h6 {
 
 h1 {
 font-size: 64px;
+
 }
 
 h3 {
@@ -42,6 +43,10 @@ h3 {
 .content-subtitle {
   font-size: 96px;
   margin-bottom: 30px;
+}
+
+.content-header {
+margin-top: 65px;
 }
 
 .content-text {
