--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -135,7 +135,9 @@ button.btn:hover {
 }
 
 nav {
-  padding: 20px 30px 10px 30px;
+  padding: 20px 30px 15px 30px;
+    font-family: "Poppins", sans-serif;
+
 }
 nav ul {
   list-style-type: none;
@@ -150,6 +152,7 @@ nav a {
   text-decoration: none;
   color: var(--primary-color);
   transition: all 100ms ease-in-out;
+  /* padding-top: 100px; */
 }
 
 nav a::hover{
@@ -159,8 +162,43 @@ nav a::hover{
 nav li.active a {
     color: #6c63ff;
     font-weight: 500;
+  }
+
+footer {
+  text-align: center;
+  padding-bottom: 100px;
+  padding-top: 30px;
 }
 
+footer a {
+  text-decoration: none;
+}
+
+i {
+  padding: 14px 14px;
+font-size: 18px;
+background-color: #F9F7FE;
+;
+border-radius: 50%;
+margin: 15px;
+color: #6c63ff;
+}
+
+footer i:hover{
+  color: black;
+}
+
+footer .email-link {
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  color: black;
+  transition: all 100ms ease-in-out;
+}
+
+footer .email-link:hover {
+  color:#6c63ff;
+}
+  
 @media (min-width: 992px) {
   .content-text {
     padding-left: 100px;
@@ -173,7 +211,7 @@ nav li.active a {
     text-align: center;
   }
   .row h2 {
-    font-size: 20px;
+    font-size: 80px;
   }
   .container h2 {
     font-size: 64px;
@@ -194,6 +232,9 @@ nav li.active a {
   .content-text {
     margin-top: 50px;
   }
+  .row h2 { 
+      /* margin-top: 50px; */
+  }
 }
 
 @media (max-width: 768px) {
@@ -208,6 +249,9 @@ app-content {
 .col-6 img {
   display:none;
 }
+.row h2 { 
+      margin-top: 0;
+  }
 }
 
 
@@ -237,9 +281,10 @@ app-content {
     margin: 30px 0 0px 0;
     padding: 0;
   }
+ 
 }
     @media (max-width: 576px) {
       h1 {
     font-size: 38px;
-  }
-    } */
+      }
+}
