--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -50,7 +50,7 @@ margin-top: 65px;
 }
 
 .content-text {
-  margin-top: 200px;
+  margin-top: 130px;
 }
 
 .hero h2 {
@@ -110,6 +110,7 @@ img {
   transition: all 100ms ease-in-out;
 }
 
+
 button.btn {
   text-decoration: none;
   font-family: "Poppins", sans-serif;
@@ -130,22 +131,25 @@ button.btn:hover {
 }
 
 .logo {
-  max-width: 150px;
+  max-width: 50px;
   margin: 0;
+  padding: 0;
 }
 
 nav {
-  padding: 20px 30px 15px 30px;
+  padding: 20px 30px 1px 15px;
     font-family: "Poppins", sans-serif;
+    margin: 10px 0;
 
 }
 nav ul {
   list-style-type: none;
+
 }
 
 nav li {
   display: inline-block;
-  padding: 0 10px 0 10px;
+  padding: 13px 10px;
 }
 
 nav a {
@@ -173,6 +177,29 @@ footer {
 footer a {
   text-decoration: none;
 }
+footer .contact-box {
+  background-color: #F9F7FE;
+  border-radius: 10px;
+  padding: 30px;
+  margin-bottom: 40px!important;
+  max-width: 1300px;
+  display: block;
+  margin: 0 auto;
+}
+
+h4 {
+  font-size: 48px;
+}
+
+.contact-box .button {
+  /* padding:  70px 0 0; */
+  margin: 25px 70px 0 0;
+}
+
+.contact-box p {
+  text-align: left;
+}
+
 
 i {
   padding: 14px 14px;
@@ -185,7 +212,8 @@ color: #6c63ff;
 }
 
 footer i:hover{
-  color: black;
+  color: #F9F7FE;
+  background:#6c63ff;
 }
 
 footer .email-link {
@@ -198,6 +226,7 @@ footer .email-link {
 footer .email-link:hover {
   color:#6c63ff;
 }
+
   
 @media (min-width: 992px) {
   .content-text {
@@ -208,6 +237,12 @@ footer .email-link:hover {
 p {
     font-family: "Poppins", sans-serif;
 
+}
+
+@media (min-width: 992px) {
+  .col-lg-6 img {
+    margin: 0 0 0 82px;
+  }
 }
 
 @media (max-width: 992px) {
@@ -241,19 +276,19 @@ p {
 }
 
 @media (max-width: 768px) {
- nav ul{
-  display: block;
-  margin: 0 auto;
-padding: 0;
-}
-app-content {
-  padding:none;
-}
-.col-6 img {
-  display:none;
-}
-.row h2 { 
-      margin-top: 0;
+  nav ul{
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+  }
+  app-content {
+    padding:none;
+  }
+  .col-6 img {
+    display:none;
+  }
+  .row h2 { 
+    margin-top: 0;
   }
 }
 
@@ -284,10 +319,12 @@ app-content {
     margin: 30px 0 0px 0;
     padding: 0;
   }
- 
+ .contact {
+  text-align: center;
 }
-    @media (max-width: 576px) {
-      h1 {
+}
+@media (max-width: 576px) {
+  h1 {
     font-size: 38px;
       }
 }
