--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -110,6 +110,24 @@ img {
   transition: all 100ms ease-in-out;
 }
 
+a{
+
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  color: #6c63ff;
+  background-color: white;
+  font-size: 18px;
+  border-radius: 4px;
+  border-color: #6c63ff !important;
+  border-width: 1.5px;
+  margin-bottom: 50px;
+}
+
+a:hover {
+  color: var(--primary-color);
+  border-color: #6c63ff;
+  color: var(--primary-color);
+}
 
 button.btn {
   text-decoration: none;
@@ -129,6 +147,7 @@ button.btn:hover {
   border-color: #6c63ff;
   color: var(--primary-color);
 }
+
 
 .logo {
   max-width: 50px;
@@ -159,7 +178,7 @@ nav a {
   /* padding-top: 100px; */
 }
 
-nav a::hover{
+nav a:hover{
   color: #6c63ff;
 }
 
@@ -225,6 +244,10 @@ footer .email-link {
 
 footer .email-link:hover {
   color:#6c63ff;
+}
+
+footer .social-icon {
+  margin: 10px 0;
 }
 
   
